--- a/CSharpPartTwo/Exam/ExamPrep/01-KaspichanNumbers/01-KaspichanNumbers.csproj
+++ b/CSharpPartTwo/Exam/ExamPrep/01-KaspichanNumbers/01-KaspichanNumbers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3A496EA-88CD-4365-AB63-FCA6AA9383E3}</ProjectGuid>
+    <ProjectGuid>{A833FFD4-862B-4409-B1F0-3A1E4844396B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03_3DStars</RootNamespace>
-    <AssemblyName>03-3DStars</AssemblyName>
+    <RootNamespace>_01_KaspichanNumbers</RootNamespace>
+    <AssemblyName>01-KaspichanNumbers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03-3DStars.cs" />
+    <Compile Include="01-KaspichanNumbers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
