--- a/CSharpPartTwo/Exam/ExamPrep/02-GreedyDwarf/02-GreedyDwarf.csproj
+++ b/CSharpPartTwo/Exam/ExamPrep/02-GreedyDwarf/02-GreedyDwarf.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3A496EA-88CD-4365-AB63-FCA6AA9383E3}</ProjectGuid>
+    <ProjectGuid>{9387C39B-A216-429A-BF7D-280AE885ADA4}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03_3DStars</RootNamespace>
-    <AssemblyName>03-3DStars</AssemblyName>
+    <RootNamespace>_02_GreedyDwarf</RootNamespace>
+    <AssemblyName>02-GreedyDwarf</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03-3DStars.cs" />
+    <Compile Include="02-GreedyDwarf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
