--- a/CSharpPartTwo/Exam/ExamPrep/03-KukataIsDancing/03-KukataIsDancing.csproj
+++ b/CSharpPartTwo/Exam/ExamPrep/03-KukataIsDancing/03-KukataIsDancing.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3A496EA-88CD-4365-AB63-FCA6AA9383E3}</ProjectGuid>
+    <ProjectGuid>{4AE1DADB-77C8-4C91-A3E3-EAA4424E9F20}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03_3DStars</RootNamespace>
-    <AssemblyName>03-3DStars</AssemblyName>
+    <RootNamespace>_03_KukataIsDancing</RootNamespace>
+    <AssemblyName>03-KukataIsDancing</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03-3DStars.cs" />
+    <Compile Include="03-KukataIsDancing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
