--- a/CSharpPartTwo/Exam/ExamPrep/03-Laser/03-Laser.csproj
+++ b/CSharpPartTwo/Exam/ExamPrep/03-Laser/03-Laser.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3A496EA-88CD-4365-AB63-FCA6AA9383E3}</ProjectGuid>
+    <ProjectGuid>{2EBC96D6-3D57-4AB0-BBF4-A4011596150B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03_3DStars</RootNamespace>
-    <AssemblyName>03-3DStars</AssemblyName>
+    <RootNamespace>_03_Laser</RootNamespace>
+    <AssemblyName>03-Laser</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03-3DStars.cs" />
+    <Compile Include="03-Laser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
