--- a/CSharpPartTwo/Exam/ExamPrep/04-BasicLanguage/04-BasicLanguage.csproj
+++ b/CSharpPartTwo/Exam/ExamPrep/04-BasicLanguage/04-BasicLanguage.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3A496EA-88CD-4365-AB63-FCA6AA9383E3}</ProjectGuid>
+    <ProjectGuid>{54360CAF-640D-4113-9861-B34FEB9ED517}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03_3DStars</RootNamespace>
-    <AssemblyName>03-3DStars</AssemblyName>
+    <RootNamespace>_04_BasicLanguage</RootNamespace>
+    <AssemblyName>04-BasicLanguage</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03-3DStars.cs" />
+    <Compile Include="04-BasicLanguage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
