--- a/DataStructures&Algorithms/01-LinearDataStructures/12-Stack/12-Stack.csproj
+++ b/DataStructures&Algorithms/01-LinearDataStructures/12-Stack/12-Stack.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CC880F94-38B0-4461-AF04-99B6AD7A03D6}</ProjectGuid>
+    <ProjectGuid>{D14C246E-ED44-49D2-A893-CD7D6D705074}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LinkedList</RootNamespace>
-    <AssemblyName>11-LinkedList</AssemblyName>
+    <RootNamespace>_12_Stack</RootNamespace>
+    <AssemblyName>12-Stack</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,9 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyStack.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="LinkedList.cs" />
-    <Compile Include="ListElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
