--- a/DataStructures&Algorithms/01-LinearDataStructures/13-Queue/13-Queue.csproj
+++ b/DataStructures&Algorithms/01-LinearDataStructures/13-Queue/13-Queue.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CC880F94-38B0-4461-AF04-99B6AD7A03D6}</ProjectGuid>
+    <ProjectGuid>{7AD3E1BC-A4B6-438E-83EF-548CE1694A17}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LinkedList</RootNamespace>
-    <AssemblyName>11-LinkedList</AssemblyName>
+    <RootNamespace>_13_Queue</RootNamespace>
+    <AssemblyName>13-Queue</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,10 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyQueue.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="LinkedList.cs" />
-    <Compile Include="ListElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QElement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
