--- a/DataBases/07-ADO-NET/01-RowCount/Properties/Settings.settings
+++ b/DataBases/07-ADO-NET/01-RowCount/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CategoriesRowCount.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RowCount.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Connection" Type="System.String" Scope="Application">
