--- a/DataStructures&Algorithms/03-Dictionaries-Hash-Tables-Sets/04-MyHashTable/04-05-MyHashTable.csproj
+++ b/DataStructures&Algorithms/03-Dictionaries-Hash-Tables-Sets/04-MyHashTable/04-05-MyHashTable.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>e0dc0b0b-2fa7-4000-98ae-fffaf521183b</ProjectGuid>
+    <ProjectGuid>{B2555E20-7152-4E5A-A3A1-AC2541858BB8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_04_MyHashTable</RootNamespace>
-    <AssemblyName>_04_MyHashTable</AssemblyName>
+    <RootNamespace>MyHashTable</RootNamespace>
+    <AssemblyName>04-MyHashTable</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyHashTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
