--- a/DataStructures&Algorithms/05-DataStructuresEfficiency/03-BiDictionary/03-BiDictionary.csproj
+++ b/DataStructures&Algorithms/05-DataStructuresEfficiency/03-BiDictionary/03-BiDictionary.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CBD80771-75AD-4405-8970-6C031FD6E220}</ProjectGuid>
+    <ProjectGuid>{2EDFF290-3750-44D5-81B4-CB95DEE4309F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TradeCompany</RootNamespace>
-    <AssemblyName>02-TradeCompany</AssemblyName>
+    <RootNamespace>BiDictionary</RootNamespace>
+    <AssemblyName>03-BiDictionary</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,13 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Article.cs" />
+    <Compile Include="BiDictionary.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="data.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
