--- a/DataStructures&Algorithms/05-DataStructuresEfficiency/packages/repositories.config
+++ b/DataStructures&Algorithms/05-DataStructuresEfficiency/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\01-OrderStudents\packages.config" />
+  <repository path="..\02-TradeCompany\packages.config" />
+  <repository path="..\03-BiDictionary\packages.config" />
 </repositories>
